# cmake-google-example

./: CMakeLists.txt  README.md
src/: benchmark.cpp  main.cpp  man.proto  server.cpp
src/test/: case.cpp  case.h  test.cpp
